rust/oxide_generator_rs/tests/ui/fail_reducer_infer_without_sliced_state.stderr
error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:24:5
   |
24 |     async fn init(&mut self, _ctx: oxide_core::InitContext<Self::SideEffect>) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SlicedState` is not implemented for `MyState`

error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:18:1
   |
18 | #[reducer(engine = MyEngine, snapshot = MySnapshot, initial = MyState { a: 0 }, no_frb)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SlicedState` is not implemented for `MyState`
   |
   = note: this error originates in the attribute macro `reducer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:18:1
   |
18 | #[reducer(engine = MyEngine, snapshot = MySnapshot, initial = MyState { a: 0 }, no_frb)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SlicedState` is not implemented for `MyState`

error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
 --> $WORKSPACE/oxide_core/src/engine/store.rs
  |
  |     async fn init(&mut self, ctx: InitContext<Self::SideEffect>);
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SlicedState` is not implemented for `MyState`

error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
 --> $WORKSPACE/oxide_core/src/engine/store.rs
  |
  |     async fn init(&mut self, ctx: InitContext<Self::SideEffect>);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SlicedState` is not implemented for `MyState`

error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:24:60
   |
24 |     async fn init(&mut self, _ctx: oxide_core::InitContext<Self::SideEffect>) {}
   |                                                            ^^^^^^^^^^^^^^^^ the trait `SlicedState` is not implemented for `MyState`

error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:28:21
   |
28 |         state: &mut Self::State,
   |                     ^^^^^^^^^^^ the trait `SlicedState` is not implemented for `MyState`

error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:41:22
   |
41 |         _state: &mut Self::State,
   |                      ^^^^^^^^^^^ the trait `SlicedState` is not implemented for `MyState`

error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:24:36
   |
24 |     async fn init(&mut self, _ctx: oxide_core::InitContext<Self::SideEffect>) {}
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SlicedState` is not implemented for `MyState`

error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:20:18
   |
20 |     type State = MyState;
   |                  ^^^^^^^ the trait `SlicedState` is not implemented for `MyState`

error[E0599]: the function or associated item `new` exists for struct `ReducerEngine<MyReducer, _>`, but its trait bounds were not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:18:1
   |
4  | pub struct MyState {
   | ------------------ doesn't satisfy `MyState: SlicedState`
...
16 | pub struct MyReducer;
   | -------------------- doesn't satisfy `MyReducer: Reducer<_>`
17 |
18 | #[reducer(engine = MyEngine, snapshot = MySnapshot, initial = MyState { a: 0 }, no_frb)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function or associated item cannot be called on `ReducerEngine<MyReducer, _>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `MyState: SlicedState`
           which is required by `MyReducer: Reducer<_>`
note: the trait `SlicedState` must be implemented
  --> $WORKSPACE/oxide_core/src/engine/store.rs
   |
   | pub trait SlicedState: Clone + PartialEq + Eq + Send + Sync + 'static {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `reducer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `dispatch` exists for struct `ReducerEngine<MyReducer, _>`, but its trait bounds were not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:18:1
   |
4  | pub struct MyState {
   | ------------------ doesn't satisfy `MyState: SlicedState`
...
16 | pub struct MyReducer;
   | -------------------- doesn't satisfy `MyReducer: Reducer<_>`
17 |
18 | #[reducer(engine = MyEngine, snapshot = MySnapshot, initial = MyState { a: 0 }, no_frb)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method cannot be called on `ReducerEngine<MyReducer, _>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `MyState: SlicedState`
           which is required by `MyReducer: Reducer<_>`
note: the trait `SlicedState` must be implemented
  --> $WORKSPACE/oxide_core/src/engine/store.rs
   |
   | pub trait SlicedState: Clone + PartialEq + Eq + Send + Sync + 'static {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `reducer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `current` exists for struct `ReducerEngine<MyReducer, _>`, but its trait bounds were not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:18:1
   |
4  | pub struct MyState {
   | ------------------ doesn't satisfy `MyState: SlicedState`
...
16 | pub struct MyReducer;
   | -------------------- doesn't satisfy `MyReducer: Reducer<_>`
17 |
18 | #[reducer(engine = MyEngine, snapshot = MySnapshot, initial = MyState { a: 0 }, no_frb)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method cannot be called on `ReducerEngine<MyReducer, _>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `MyState: SlicedState`
           which is required by `MyReducer: Reducer<_>`
note: the trait `SlicedState` must be implemented
  --> $WORKSPACE/oxide_core/src/engine/store.rs
   |
   | pub trait SlicedState: Clone + PartialEq + Eq + Send + Sync + 'static {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `reducer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:28:16
   |
28 |         state: &mut Self::State,
   |                ^^^^^^^^^^^^^^^^ the trait `SlicedState` is not implemented for `MyState`

error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:41:17
   |
41 |         _state: &mut Self::State,
   |                 ^^^^^^^^^^^^^^^^ the trait `SlicedState` is not implemented for `MyState`

error[E0277]: the trait bound `MyState: SlicedState` is not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:20:18
   |
20 |     type State = MyState;
   |                  ^^^^^^^ the trait `SlicedState` is not implemented for `MyState`
   |
note: required by a bound in `_oxide_require_sliced_state`
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:18:1
   |
18 | #[reducer(engine = MyEngine, snapshot = MySnapshot, initial = MyState { a: 0 }, no_frb)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `_oxide_require_sliced_state`
   = note: this error originates in the attribute macro `reducer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `subscribe` exists for struct `ReducerEngine<MyReducer, _>`, but its trait bounds were not satisfied
  --> tests/ui/fail_reducer_infer_without_sliced_state.rs:18:1
   |
4  | pub struct MyState {
   | ------------------ doesn't satisfy `MyState: SlicedState`
...
18 | #[reducer(engine = MyEngine, snapshot = MySnapshot, initial = MyState { a: 0 }, no_frb)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method cannot be called on `ReducerEngine<MyReducer, _>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `MyState: SlicedState`
note: the trait `SlicedState` must be implemented
  --> $WORKSPACE/oxide_core/src/engine/store.rs
   |
   | pub trait SlicedState: Clone + PartialEq + Eq + Send + Sync + 'static {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `reducer` (in Nightly builds, run with -Z macro-backtrace for more info)
